--- a/apps/films/templates/films/director_detail.html
+++ b/apps/films/templates/films/director_detail.html
@@ -183,7 +183,9 @@
 <body>
 
 <nav>
-    <div class="nav-left">Letterboxd</div>
+    <div class="nav-left">
+        <a href="{% url 'home' %}" style="color: #fc5b9b; text-decoration: none;">Letterboxd</a>
+    </div>
     <div class="nav-right">
         {% if request.user.is_authenticated %}
             <a href="{% url 'profile_films' request.user.username %}">Your Films</a>
@@ -195,8 +197,10 @@
         {% endif %}
 
         <div class="search-bar">
-            <input type="text" placeholder="Search...">
-            <button>🔍</button>
+            <form method="get" action="{% url 'film_search' %}">
+                <input type="text" name="q" placeholder="Search films..." value="{{ request.GET.q }}">
+                <button type="submit">🔍</button>
+            </form>
         </div>
     </div>
 </nav>
