--- a/apps/films/templates/films/films.html
+++ b/apps/films/templates/films/films.html
@@ -175,8 +175,10 @@
         {% endif %}
 
         <div class="search-bar">
-            <input type="text" placeholder="Search...">
-            <button>🔍</button>
+            <form method="get" action="{% url 'film_search' %}">
+                <input type="text" name="q" placeholder="Search films..." value="{{ request.GET.q }}">
+                <button type="submit">🔍</button>
+            </form>
         </div>
     </div>
 </nav>
